# dfdm-specfem2d-benchmark

./: .gitignore  .gitmodules  README.md  run_benchmark.sh  setup.sh
DFDM_2D_1.0/: .gitignore  .gitmodules  CMakeLists.txt  README.md  strong_scale_64.sh
DFDM_2D_1.0/config/: ak135f.model  ak135f_4layer.model  config.toml  config_baseline.toml  env_perlmutter.sh
DFDM_2D_1.0/config/test/: config_test.toml
DFDM_2D_1.0/include/: ElementData.hpp  ProcessData.hpp  State.hpp  domain.hpp  element.hpp  grid.hpp  knots.hpp  model.hpp  mpi_helper.hpp  operators.hpp  receiver.hpp  simulation.hpp  source.hpp  timing.hpp  utils.hpp
DFDM_2D_1.0/matrix/: CMakeLists.txt
DFDM_2D_1.0/matrix/matrix/: CMakeLists.txt
DFDM_2D_1.0/matrix/matrix/include/: matrix.hpp
DFDM_2D_1.0/matrix/matrix/src/: matrix.cpp
DFDM_2D_1.0/matrix/tests/: test.cpp
DFDM_2D_1.0/mesh_gen_ak135/: .gitmodules  CMakeLists.txt
DFDM_2D_1.0/mesh_gen_ak135/config/: ak-135f.model  config_file.toml  env_perlmutter.sh
DFDM_2D_1.0/mesh_gen_ak135/include/: ProcessData.hpp  element.hpp  model.hpp  utils.hpp
DFDM_2D_1.0/mesh_gen_ak135/matrix/: CMakeLists.txt
DFDM_2D_1.0/mesh_gen_ak135/matrix/matrix/: CMakeLists.txt
DFDM_2D_1.0/mesh_gen_ak135/matrix/matrix/include/: matrix.hpp
DFDM_2D_1.0/mesh_gen_ak135/matrix/matrix/src/: matrix.cpp
DFDM_2D_1.0/mesh_gen_ak135/matrix/tests/: tests.cpp
DFDM_2D_1.0/mesh_gen_ak135/src/: ProcessData.cpp  element.cpp  mesh_gen.cpp  model.cpp  utils.cpp
DFDM_2D_1.0/openblas_install/include/: openblas_config.h
DFDM_2D_1.0/openblas_install/lib/: libopenblas.dylib
DFDM_2D_1.0/openblas_install/lib/cmake/openblas/: OpenBLASConfig.cmake  OpenBLASConfigVersion.cmake
DFDM_2D_1.0/openblas_install/lib/pkgconfig/: openblas.pc
DFDM_2D_1.0/plot/: plot_2d.py  plot_2d_src.py  plot_2d_src_individual_elems.py  plot_2d_unstruct.py  plot_model.py  plot_wave.py  test.py  visualizer.py  visualizer_static.py  viz_receiver.py
DFDM_2D_1.0/src/: ElementData.cpp  ProcessData.cpp  State.cpp  domain.cpp  element.cpp  grid.cpp  knots.cpp  main.cpp  model.cpp  mpi_helper.cpp  operators.cpp  receiver.cpp  simulation.cpp  source.cpp  utils.cpp
DFDM_2D_1.0/tests/: bspline.py  test_run.py  test_run_mpi.py  test_source_location.py
DFDM_2D_1.0/tests/full_sim_reference/: elem_2_0.out  elem_2_100.out  elem_2_1000.out  elem_2_1050.out  elem_2_1100.out  elem_2_1150.out  elem_2_1200.out  elem_2_1250.out  elem_2_1300.out  elem_2_1350.out  elem_2_1400.out  elem_2_1450.out  elem_2_150.out  elem_2_1500.out  elem_2_1550.out  elem_2_1600.out  elem_2_1650.out  elem_2_1700.out  elem_2_1750.out  elem_2_1800.out  elem_2_1850.out  elem_2_1900.out  elem_2_1950.out  elem_2_200.out  elem_2_2000.out  elem_2_2050.out  elem_2_2100.out  elem_2_2150.out  elem_2_2200.out  elem_2_2250.out  elem_2_2300.out  elem_2_2350.out  elem_2_2400.out  elem_2_2450.out  elem_2_250.out  elem_2_2500.out  elem_2_2550.out  elem_2_2600.out  elem_2_2650.out  elem_2_2700.out  (+378 more)
DFDM_2D_1.0/tests/ref_config/: config_test.toml  config_test_source_location.toml
DFDM_2D_1.0/tests/ref_matrices/: B1_X_2  B1_X_7  B1_Z_2  B1_Z_7  B2_X_2  B2_X_7  B2_Z_2  B2_Z_7
DFDM_2D_1.0/tests/ref_mesh_4/: process_0_data.txt  process_1_data.txt  process_2_data.txt  process_3_data.txt
DFDM_2D_1.0/tests/ref_mesh_single/: process_0_data.txt
DFDM_2D_1.0/tests/ref_mesh_source_location/: process_0_data.txt  process_1_data.txt  process_2_data.txt  process_3_data.txt
DFDM_2D_1.0/tests/ref_mesh_source_location/grid/: grid_x_0  grid_x_1  grid_x_2  grid_x_3  grid_x_4  grid_x_5  grid_x_6  grid_x_7  grid_x_8  grid_z_0  grid_z_1  grid_z_2  grid_z_3  grid_z_4  grid_z_5  grid_z_6  grid_z_7  grid_z_8
scripts/: compare_snapshots.py  compute_dfdm_coordinates.py
specfem2d/DATA/: Par_file  SOURCE  STATIONS
specfem2d/MESH/: Material_1700km  Mesh_1700km  Nodes_1700km
specfem2d/mesh_gen/: create_mesh_AK135F_2D_with_central_cube_no_PML_whole_earth.F90  cut_mesh_1700km.py
specfem2d_mf8/DATA/: STATIONS
specfem2d_mf8/MESH/: Material_1700km  Nummaterial_velocity_file_1700km  Surf_abs_1700km
specfem2d_mf8/mesh_gen/: create_mesh_AK135F_2D_with_central_cube_no_PML_whole_earth.F90  cut_mesh_1700km.py
