cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
project(mat_test LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 11)
find_package(OpenBLAS REQUIRED) 
if(OpenBLAS_FOUND)
    message(STATUS "OpenBLAS found at: ${OpenBLAS_INCLUDE_DIRS}")
endif()
add_subdirectory(matrix)
include_directories(matrix/include ${OpenBLAS_INCLUDE_DIRS})

add_executable(mat_test tests/tests.cpp)
target_link_libraries(mat_test matrix_lib)